# esp32-espidf-cpp-base

./: .gitignore  CMakeLists.txt  README.md
include/: dummy_header.hpp  timer.hpp
lib/dummy_class/: CMakeLists.txt
lib/dummy_class/include/: dummy_class.hpp
lib/dummy_class/src/: dummy_class.cpp
main/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  dummy.cpp  main.cpp  timer.cpp
